# gazebo-box3d

./: CMakeLists.txt
config/: cfg.yaml
src/: config.py  gen_split.py  plugin.cpp  rosbag_gen_label.py
